--- a/css/hero.css
+++ b/css/hero.css
@@ -1,3 +1,4 @@
+/* body styles */
 body{
     margin: 0;
     font-size: 20px;
@@ -5,6 +6,7 @@ body{
     line-height: 30px;
 }
 
+/* header styles */
 header{
     background-color: black;
     text-align: center;
@@ -27,6 +29,13 @@ header img{
     border: 20px solid silver;
 }
 
+h2{
+    font-size: 30px;
+    color: darkturquoise;
+    margin: 40px 0 10px;
+}
+
+/* main styles */
 main{
     max-width: 800px;
     margin: 0 auto;
@@ -37,12 +46,7 @@ main img{
     max-width: 100%;
 }
 
-h2{
-    font-size: 30px;
-    color: darkturquoise;
-    margin: 40px 0 10px;
-}
-
+/* link styles */
 a{
     color: darkturquoise;
 }
@@ -52,6 +56,7 @@ a:hover{
     background-color: cadetblue;
 }
 
+/* footer styles */
 footer{
     background-color: black;
     text-align: center;
@@ -72,6 +77,7 @@ footer p{
     margin: 0;
 }
 
+/* class styles */
 p.caption{
     color: lightgrey;
     font-style: italic;
